# TermSolitaire

./: CMakeLists.txt  CMakeSettings.json  DOCS.md  LICENSE  README.md
src/: main.cpp
src/Classes/Card/: Card.cpp  Card.hpp
src/Classes/Display/: Display.cpp  Display.hpp
src/Classes/Game/: Game.cpp  Game.hpp
src/Classes/Input/: Input.hpp
src/Classes/Logic/: Logic.cpp  Logic.hpp
src/Concepts/: Callable.hpp  Numeric.hpp  StdVector.hpp
src/Evaluators/: Evaluator.hpp
src/Functions/: moveLastElement.hpp  printUTF32.hpp
src/Structs/: BytePair.hpp
